# listigt

./: .gitignore  LICENCE  README.md  config.toml  main.py  setup.cfg  small_test.txt
config/: config.py
listigt/: main.py
listigt/config/: config.py
listigt/todo_list/: todo_list.py  tree.py
listigt/ui/: action.py  footer_window.py  help_window.py  search_field.py  todo_item_tree.py  ui.py
listigt/utils/: optional.py
listigt/view_model/: view_model.py
src/listigt/: __init__.py  main.py
src/listigt/todo_list/: __init__.py  todo_list.py
src/listigt/ui/: __init__.py  new_item_input.py  search_field.py  todo_item_tree.py  ui.py
src/listigt/view_model/: __init__.py  view_model.py
tests/: test_optional.py  test_todo_list.py  test_tree.py  test_view_model.py
todo_list/: todo_list.py  tree.py
todo_list/tests/: test_todo_list.py  test_tree.py
ui/: new_item_input.py  search_field.py  todo_item_tree.py  ui.py  widgets.py
view_model/: view_model.py
view_model/tests/: test_view_model.py
