[metadata]
name = listigt
version = 0.1

[options]
packages = listigt

install_requires =
    pyperclip
    pytermgui
    toml
    importlib-metadata; python_version>"3.8"

[options.entry_points]
console_scripts =
    listigt = listigt.main:main

[options.packages.find]
exclude =
    listigt.tests*
